{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 16,
  "lineage": "e9e0b986-be25-ad47-5325-dbce32152089",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b3aef6bc281a13b2",
            "arn": "arn:aws:ec2:us-east-1:965244704449:instance/i-002879b8adaf089f1",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-002879b8adaf089f1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "{var.resoursename}-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09b1285fed368b1dc",
            "private_dns": "ip-10-0-1-214.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.214",
            "public_ip": "54.226.24.3",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-east-1:965244704449:key/841f15c3-ac9e-4693-bbc9-adc3e1d56f5f",
                "throughput": 0,
                "volume_id": "vol-002ebb8fd6983cc5e",
                "volume_size": 15,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-041556166ce3e7a26",
            "tags": {
              "Name": "webproject-server"
            },
            "tags_all": {
              "Name": "webproject-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fd763f14ec57c602"
            ]
          },
          "dependencies": [
            "module.ec2.aws_key_pair.generated_key",
            "module.ec2.data.aws_ami.amazon_linux_2",
            "module.ec2.tls_private_key.example",
            "module.rdb.aws_db_instance.mydb",
            "module.security-group.aws_security_group.rds_sg",
            "module.security-group.aws_security_group.sg",
            "module.vpc.aws_db_subnet_group.subnet_group",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security-group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:965244704449:security-group/sg-05ef94e6abf84f670",
            "description": "Allow inbound PostgreSQL traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05ef94e6abf84f670",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "webproject-rds_sg",
            "name_prefix": "",
            "owner_id": "965244704449",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b22b628c1cf64ade"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security-group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:965244704449:security-group/sg-0fd763f14ec57c602",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fd763f14ec57c602",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "webproject-sg",
            "name_prefix": "",
            "owner_id": "965244704449",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b22b628c1cf64ade"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:965244704449:internet-gateway/igw-0e5dbaf58a79e965f",
            "id": "igw-0e5dbaf58a79e965f",
            "owner_id": "965244704449",
            "tags": {
              "Name": "webproject-igw"
            },
            "tags_all": {
              "Name": "webproject-igw"
            },
            "vpc_id": "vpc-0b22b628c1cf64ade"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "route_to_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0e5dbaf58a79e965f",
            "id": "r-rtb-0b9151fc6cdbfccce1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b9151fc6cdbfccce",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:965244704449:route-table/rtb-0b9151fc6cdbfccce",
            "id": "rtb-0b9151fc6cdbfccce",
            "owner_id": "965244704449",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "webproject-PublicRouteTable"
            },
            "tags_all": {
              "Name": "webproject-PublicRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b22b628c1cf64ade"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-014fc0e6aa4e180e4",
            "route_table_id": "rtb-0b9151fc6cdbfccce",
            "subnet_id": "subnet-041556166ce3e7a26"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:965244704449:subnet/subnet-0ed38605abdf76460",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ed38605abdf76460",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "965244704449",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "webproject-private-subnet"
            },
            "tags_all": {
              "Name": "webproject-private-subnet"
            },
            "vpc_id": "vpc-0b22b628c1cf64ade"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:965244704449:subnet/subnet-041556166ce3e7a26",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-041556166ce3e7a26",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "965244704449",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "webproject-public-subnet"
            },
            "tags_all": {
              "Name": "webproject-public-subnet"
            },
            "vpc_id": "vpc-0b22b628c1cf64ade"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:965244704449:vpc/vpc-0b22b628c1cf64ade",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05a146c1c1221d8ac",
            "default_route_table_id": "rtb-002c5a6bc4d031e4e",
            "default_security_group_id": "sg-04685e21fd66b1785",
            "dhcp_options_id": "dopt-0b4c4759ca932a92b",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b22b628c1cf64ade",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-002c5a6bc4d031e4e",
            "owner_id": "965244704449",
            "tags": {
              "Name": "webproject-vpc"
            },
            "tags_all": {
              "Name": "webproject-vpc"
            }
          }
        }
      ]
    }
  ]
}